Development
	Key j selects visible subtitle
	Key v toggles subtitle visibility
	When using dvdnav:// prev and next should do chapter seeks
	Added pt_BR translation
	On file open if file does not exi
	When SetURL is passed in, set the media file in title bar to the URL
	Fix mplayer not being shutdown on F8
	When we are on GTK 2.12, use the Volume Button widget
	Work around bug in g_stat reporting a mms url as a directory.
	Add pulse to the list of possible AO devices
	For dvdnav:// urls don't load it as a playlist
	Add fallback support for playlist media (playlist within playlist)
0.5.2
	Minor GUI cleanup
	Remove extra carrage returns from metadata
	Fix problem with playlist position after double clicking
	Fix some problems identified by Starcrasher
	Updated French translation
	Try to handle UTF8 title and artist names better
	When running in RP emulation, update the media label over the bus
	Fix problem with media info being shown on BBC News site when it should not
	Fix dragging and dropping of a playlist that is not parsable (ASX for example)
	Fix for BBC Radio
	Show the playlist filename in the first column header of the playlist view
	Don't show the song_title widget, but show the media label widget
	Show the media media data when video is no present
	Show 'playback area' as filler when playlist is shown
	Allow updating of song title and artist from http://www.thedividingline.com
	Fix crasher in shuffle playlist and also don't allow it when < 2 items on list
	Allow opening of playlist via File->Open Menu
	Disable File->Details until first file is loaded
	Add src/playlist.c to POTFILES.in
	Fix crasher in parse_basic and then if the itemname is passed in blank, don't add it to the list
	Enable tooltip showing complete filename when hovering over item in playlist
	When running in realplayer mode, make sure GUI is properly updated
	Use the filesize and the stream_pos to help out with the buffering/autopause
	90% coverage of RealPlayer 'controls'