@@ -77,4 +77,4 @@
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "0.5.2"
+#define VERSION "0.5.3"
