@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnome-mplayer, 0.5.2)
+AM_INIT_AUTOMAKE(gnome-mplayer, 0.5.3)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
@@ -28,9 +28,14 @@ AM_GLIB_GNU_GETTEXT
 
 AM_PROG_LIBTOOL
 
-PKG_CHECK_MODULES(GNOME, [libgnome-2.0 libgnomeui-2.0 ])
-AC_SUBST(GNOME_CFLAGS)
-AC_SUBST(GNOME_LIBS)
+#PKG_CHECK_MODULES(GNOME, [libgnome-2.0 libgnomeui-2.0 ])
+#AC_SUBST(GNOME_CFLAGS)
+#AC_SUBST(GNOME_LIBS)
+
+PKG_CHECK_MODULES(GTK, [gtk+-2.0 glib-2.0])
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+
 
 PKG_CHECK_MODULES(GTK2_12,[gtk+-2.0 >= 2.12.0],[GTK2_12_DEFINES="-DGTK2_12_ENABLED" AC_DEFINE([GTK2_12_ENABLED],[1],[Define to 1 if you have GTK 2.12 or higher])],AC_MSG_NOTICE([Using slider for volume]))
 AC_SUBST(GTK2_12_DEFINES)
@@ -39,6 +44,9 @@ PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1 >= 0.70])
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 
+PKG_CHECK_MODULES(GCONF, [gconf-2.0])
+AC_SUBST(GCONF_CFLAGS)
+AC_SUBST(GCONF_LIBS)
 
 AC_OUTPUT([
 Makefile
