@@ -22,7 +22,7 @@
  * 	Boston, MA  02110-1301, USA.
  */
 
-#include <gnome.h>
+#include <gtk/gtk.h>
 #include <glib.h>
 #include <glib/gstdio.h>
 
